# beep_rust

./: .env  Cargo.toml  README.md
migrations/: 20250928005542_init.sql
src/: database.rs  handlers.rs  main.rs  models.rs  oldhandlers.rs
src/handlers/: mod.rs  question.rs  topic.rs
src/models/: api_response.rs  mod.rs  question.rs  topic.rs  utils.rs
src/routes/: mod.rs
